IMP Revert Fix jqueryui popup items height : was too big into Chrome Lost items

--- a/skins/default/application.css
+++ b/skins/default/application.css
@@ -259,6 +259,3 @@ thead > tr > th {
 
 table.worksheet > tbody > tr > td > input {
   margin: 0 -3px -1px -2px; }
-
-.ui-menu .ui-menu-item {
-  height: 1.2em; }
